
* Verilog::Language 3.1**

***	Add vhier --resolve-files option. [by Vasu Arasanipalai]

***     Support "parameter integer" etc, bug64. [Jeff Kurtze]

***	Support big-endian bit vectors, i.e. [0:2], bug65. [Devendra Singh]

***	Return width() of 1 for non-vectored signals, bug65. [Devendra Singh]

****	Fix "assign {{x,y},z}", bugrt43138. [Devendra Singh]

* Verilog::Language 3.110 2009/1/28

**	Support interface and import. [by Sandeep Gor]
	Add new SigParser::interface, endinterface and import callbacks.

***	Add vhier --top-module option, bug49.  [John Busco]

***	Add vpassert $ucover_bits_clk. [Mahesh Kumashikar, et al]

***	Add comments to Netlist::Net::verilog_text. [by Jeff Short]

***	Support `pragma and `default_nettype.

* Verilog::Language 3.100 2009/1/2

**	Vppp is now renamed vppreproc; vpm is renamed vpassert.
	This fixes naming conflicts with other packages.  [Chitlesh Goorah]
	Note this breaks backward compatibility and any scripts that call
	these programs will need updating.  Alternatively, add a symlink in
	your bin directory from the old name.

***	Fix missing module dependencies and Bison warning.  [Chitlesh Goorah]

* Verilog::Language 3.045 2008/12/19

***     Add vpm --noline option. [Vasu Arasanipalai]

***     Add vpm --realintent option. [Vasu Arasanipalai]

***	Fix vpm making long lines that upset Cadence's NC-Verilog. [Soon Koh]

****	Fix Makefile issues with ActivePerl.  [Jose Ochoa]

* Verilog::Language 3.044 2008/11/10

***	Support SystemVerilog unique and priority case, bug33. [by Nicky Ayoub]

***	Support SystemVerilog timeunit and timeprecision, bug34. [by Nicky Ayoub]

***	Support SystemVerilog package items, bug39. [by Nick Ayoub]

****	Expand environment variables in Verilog::Getopt.  [Lawrence Butcher]

****	Fix Verilog::EditModules when modules wrapped in ifdef.  [Mat Zeno]

* Verilog::Language 3.043 2008/09/28

***	Ignore Verilog-XL defines (suppress_faults, etc).  [Nicky Ayoub]
