@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix "assign {{x,y},z}", bugrt43138. [Devendra Singh]
 
+****	Fix documentation on ports_ordered, bug66.  [Nicky Ayoub]
+
 * Verilog::Language 3.110 2009/1/28
 
 **	Support interface and import. [by Sandeep Gor]
